Add dynamic content loading with hideContent toggle and content-area injection for About/Books/Contact pages

--- a/src/about.html
+++ b/src/about.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    Hellll
+    <!-- Yaha file ka content load hoga -->
+    <div id="content-area" class="p-4">
+        <h2>Default Dashboard Content</h2>
+        <p>Yaha pe aapka normal content dikhega.</p>
+    </div>
 </body>
+
 </html>
