--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-    <link rel="stylesheet" href="../public/StyleSheet/style.css">
+    <link rel="stylesheet" href="./public/StyleSheet/style.css">
     <script src="../bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../public/JavaScript/index.js"></script>
+    <script src="./public/JavaScript/index.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
@@ -31,7 +31,7 @@
                         style="width:23vw; min-height:100vh; background:#f9fafb; border-right:1px solid #e5e7eb;">
 
                         <div id="NewUserCard" class="text-center mb-4">
-                            <img src="../public/Images/sr.png" class="rounded-circle border shadow-sm mb-2"
+                            <img src="./public/Images/sr.png" class="rounded-circle border shadow-sm mb-2"
                                 style="width:70px; height:70px; object-fit:cover;">
                             <h6 class="fw-bold mb-0">Welcome Back 👋</h6>
                             <b class="text-primary">Suraj Rajput</b>
@@ -92,7 +92,7 @@
                             </div>
 
                             <div class="d-flex align-items-center gap-2 mb-3">
-                                <img src="../public/Images/sr.png" class="rounded-circle border"
+                                <img src="./public/Images/sr.png" class="rounded-circle border"
                                     style="width:40px; height:40px; object-fit:cover;">
                                 <div>
                                     <h6 class="mb-0 fw-semibold">Suraj Rajput</h6>
@@ -205,7 +205,7 @@
                                 <div class="owl-carousel rounded-4 ">
                                     <div class="book-card d-flex align-items-center p-3 rounded-4 text-white"
                                         style="background: linear-gradient(90deg, #6a11cb 0%, #2575fc 100%);">
-                                        <img src="../public/Images/harry.jpg" class="book-img rounded-3 me-3">
+                                        <img src="./public/Images/harry.jpg" class="book-img rounded-3 me-3">
                                         <div>
                                             <h6 class="fw-bold mb-1">Harry Potter And The Sorcerer’s Stone</h6>
                                             <small>193 Page • Chapter 13 • Last Read</small>
@@ -214,7 +214,7 @@
 
                                     <div class="book-card d-flex align-items-center p-3 rounded-4 text-white"
                                         style="background: linear-gradient(90deg, #000428 0%, #004e92 100%);">
-                                        <img src="../public/Images/tani.webp" class="book-img rounded-3 me-3">
+                                        <img src="./public/Images/tani.webp" class="book-img rounded-3 me-3">
                                         <div>
                                             <h6 class="fw-bold mb-1">TA Nehisi Coates The Water Dancer</h6>
                                             <small>New Purchase • Yet to Read</small>
@@ -223,7 +223,7 @@
 
                                     <div class="book-card d-flex align-items-center p-3 rounded-4 text-white"
                                         style="background: linear-gradient(90deg, #232526 0%, #414345 100%);">
-                                        <img src="../public/Images/rob.webp" class="book-img rounded-3 me-3">
+                                        <img src="./public/Images/rob.webp" class="book-img rounded-3 me-3">
                                         <div>
                                             <h6 class="fw-bold mb-1">Robert Dreyfus - The Life of Father and Son</h6>
                                             <small>Recently Added</small>
@@ -340,7 +340,7 @@
                                             </div>
                                         </div>
                                         <div class="d-flex align-items-center gap-3">
-                                            <img src="../public/Images/sr.png" class="rounded-circle"
+                                            <img src="./public/Images/sr.png" class="rounded-circle"
                                                 style="width:45px; height:45px; object-fit:cover;">
                                             <div>
                                                 <h6 class="mb-0 fw-bold">Suraj Rajput</h6>
