--- a/index.html
+++ b/index.html
@@ -47,37 +47,37 @@
 
                             <ul class="nav flex-column gap-2 fw-semibold">
                                 <li class="nav-item">
-                                    <a href="index.html"
+                                    <a href="./index.html"
                                         class="nav-link  active rounded px-3 py-2 d-flex align-items-center gap-2">
                                         <i class="bi bi-house-door"></i> Home
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="about.html"
+                                    <a href="./src/about.html"
                                         class="nav-link load-page text-dark rounded px-3 py-2 d-flex align-items-center gap-2">
                                         <i class="bi bi-info-circle"></i> About
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="Books.html"
+                                    <a href="./src/Books.html"
                                         class="nav-link load-page text-dark rounded px-3 py-2 d-flex align-items-center gap-2">
                                         <i class="bi bi-book"></i> Books
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="Book_Details.html"
+                                    <a href="./src/Book_Details.html"
                                         class="nav-link load-page text-dark rounded px-3 py-2 d-flex align-items-center gap-2">
                                         <i class="bi bi-journal-text"></i> Book Details
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="Contact.html"
+                                    <a href="./src/Contact.html"
                                         class="nav-link load-page text-dark rounded px-3 py-2 d-flex align-items-center gap-2">
                                         <i class="bi bi-envelope"></i> Contact
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="Analytics.html"
+                                    <a href="./src/Analytics.html"
                                         class="nav-link load-page text-dark rounded px-3 py-2 d-flex align-items-center gap-2">
                                         <i class="bi bi-bar-chart"></i> Analytics
                                     </a>
@@ -114,28 +114,28 @@
                     <ul class="nav justify-content-around w-100 text-center fw-semibold">
 
                         <li class="nav-item flex-fill">
-                            <a href="index.html" class="nav-link active d-flex flex-column align-items-center py-2">
+                            <a href="./index.html" class="nav-link active d-flex flex-column align-items-center py-2">
                                 <i class="bi bi-house-door-fill fs-5"></i>
                                 <small>Home</small>
                             </a>
                         </li>
 
                         <li class="nav-item flex-fill">
-                            <a href="Books.html" class="nav-link d-flex flex-column align-items-center py-2">
+                            <a href="./src/Books.html" class="nav-link d-flex flex-column align-items-center py-2">
                                 <i class="bi bi-book fs-5"></i>
                                 <small>Books</small>
                             </a>
                         </li>
 
                         <li class="nav-item flex-fill">
-                            <a href="Book_Details.html" class="nav-link d-flex flex-column align-items-center py-2">
+                            <a href="./src/Book_Details.html" class="nav-link d-flex flex-column align-items-center py-2">
                                 <i class="bi bi-journal-text fs-5"></i>
                                 <small>Details</small>
                             </a>
                         </li>
 
                         <li class="nav-item flex-fill">
-                            <a href="Contact.html" class="nav-link d-flex flex-column align-items-center py-2">
+                            <a href="./src/Contact.html" class="nav-link d-flex flex-column align-items-center py-2">
                                 <i class="bi bi-envelope fs-5"></i>
                                 <small>Contact</small>
                             </a>
