--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./bootstrap-5.3.8-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap-5.3.8-dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-    <link rel="stylesheet" href="./public/StyleSheet/style.css">
-    <script src="./bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../public/StyleSheet/style.css">
+    <script src="../bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
     <script src="./public/JavaScript/index.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
@@ -31,7 +31,7 @@
                         style="width:23vw; min-height:100vh; background:#f9fafb; border-right:1px solid #e5e7eb;">
 
                         <div id="NewUserCard" class="text-center mb-4">
-                            <img src="./public/Images/sr.png" class="rounded-circle border shadow-sm mb-2"
+                            <img src="../public/Images/sr.png" class="rounded-circle border shadow-sm mb-2"
                                 style="width:70px; height:70px; object-fit:cover;">
                             <h6 class="fw-bold mb-0">Welcome Back 👋</h6>
                             <b class="text-primary">Suraj Rajput</b>
@@ -53,31 +53,31 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="./src/about.html"
+                                    <a href="../src/about.html"
                                         class="nav-link load-page text-dark rounded px-3 py-2 d-flex align-items-center gap-2">
                                         <i class="bi bi-info-circle"></i> About
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="./src/Books.html"
+                                    <a href="../src/Books.html"
                                         class="nav-link load-page text-dark rounded px-3 py-2 d-flex align-items-center gap-2">
                                         <i class="bi bi-book"></i> Books
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="./src/Book_Details.html"
+                                    <a href="../src/Book_Details.html"
                                         class="nav-link load-page text-dark rounded px-3 py-2 d-flex align-items-center gap-2">
                                         <i class="bi bi-journal-text"></i> Book Details
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="./src/Contact.html"
+                                    <a href="../src/Contact.html"
                                         class="nav-link load-page text-dark rounded px-3 py-2 d-flex align-items-center gap-2">
                                         <i class="bi bi-envelope"></i> Contact
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="./src/Analytics.html"
+                                    <a href="../src/Analytics.html"
                                         class="nav-link load-page text-dark rounded px-3 py-2 d-flex align-items-center gap-2">
                                         <i class="bi bi-bar-chart"></i> Analytics
                                     </a>
@@ -92,7 +92,7 @@
                             </div>
 
                             <div class="d-flex align-items-center gap-2 mb-3">
-                                <img src="./public/Images/sr.png" class="rounded-circle border"
+                                <img src="./Images/sr.png" class="rounded-circle border"
                                     style="width:40px; height:40px; object-fit:cover;">
                                 <div>
                                     <h6 class="mb-0 fw-semibold">Suraj Rajput</h6>
@@ -121,21 +121,22 @@
                         </li>
 
                         <li class="nav-item flex-fill">
-                            <a href="./src/Books.html" class="nav-link d-flex flex-column align-items-center py-2">
+                            <a href="../src/Books.html" class="nav-link d-flex flex-column align-items-center py-2">
                                 <i class="bi bi-book fs-5"></i>
                                 <small>Books</small>
                             </a>
                         </li>
 
                         <li class="nav-item flex-fill">
-                            <a href="./src/Book_Details.html" class="nav-link d-flex flex-column align-items-center py-2">
+                            <a href="../src/Book_Details.html"
+                                class="nav-link d-flex flex-column align-items-center py-2">
                                 <i class="bi bi-journal-text fs-5"></i>
                                 <small>Details</small>
                             </a>
                         </li>
 
                         <li class="nav-item flex-fill">
-                            <a href="./src/Contact.html" class="nav-link d-flex flex-column align-items-center py-2">
+                            <a href="../src/Contact.html" class="nav-link d-flex flex-column align-items-center py-2">
                                 <i class="bi bi-envelope fs-5"></i>
                                 <small>Contact</small>
                             </a>
@@ -205,7 +206,7 @@
                                 <div class="owl-carousel rounded-4 ">
                                     <div class="book-card d-flex align-items-center p-3 rounded-4 text-white"
                                         style="background: linear-gradient(90deg, #6a11cb 0%, #2575fc 100%);">
-                                        <img src="./public/Images/harry.jpg" class="book-img rounded-3 me-3">
+                                        <img src="./Images/harry.jpg" class="book-img rounded-3 me-3">
                                         <div>
                                             <h6 class="fw-bold mb-1">Harry Potter And The Sorcerer’s Stone</h6>
                                             <small>193 Page • Chapter 13 • Last Read</small>
@@ -214,7 +215,7 @@
 
                                     <div class="book-card d-flex align-items-center p-3 rounded-4 text-white"
                                         style="background: linear-gradient(90deg, #000428 0%, #004e92 100%);">
-                                        <img src="./public/Images/tani.webp" class="book-img rounded-3 me-3">
+                                        <img src="./Images/tani.webp" class="book-img rounded-3 me-3">
                                         <div>
                                             <h6 class="fw-bold mb-1">TA Nehisi Coates The Water Dancer</h6>
                                             <small>New Purchase • Yet to Read</small>
@@ -223,7 +224,7 @@
 
                                     <div class="book-card d-flex align-items-center p-3 rounded-4 text-white"
                                         style="background: linear-gradient(90deg, #232526 0%, #414345 100%);">
-                                        <img src="./public/Images/rob.webp" class="book-img rounded-3 me-3">
+                                        <img src="./Images/rob.webp" class="book-img rounded-3 me-3">
                                         <div>
                                             <h6 class="fw-bold mb-1">Robert Dreyfus - The Life of Father and Son</h6>
                                             <small>Recently Added</small>
