set Link script add Aditional Linke Bootstrap

--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <title>LibraryManagementSystem</title>
+
 </head>
 
 <body class="bg-light">
     <header>
-        <div class="container-fluid bg-warning p-2 bg-opacity-10 min-vw-100 min-vh-100">
+        <div class="container-fluid bg-warning bg-opacity-10 min-vw-100 min-vh-100">
             <div class="rounded overflow-hidden  justify-content-between d-flex gap-2 text-dark">
 
                 <div id="navMy" class="navbar rounded d-none d-lg-block shadow-sm">
@@ -34,7 +35,7 @@
                         style="width:23vw; min-height:100vh; background:#f9fafb; border-right:1px solid #e5e7eb;">
 
                         <div id="NewUserCard" class="text-center mb-4">
-                            <img src="../public/Images/sr.png" class="rounded-circle border shadow-sm mb-2"
+                            <img src="./Images/sr.png" class="rounded-circle border shadow-sm mb-2"
                                 style="width:70px; height:70px; object-fit:cover;">
                             <h6 class="fw-bold mb-0">Welcome Back 👋</h6>
                             <b class="text-primary">Suraj Rajput</b>
@@ -157,7 +158,7 @@
 
 
 
-                <div id="main-container" class="main-container rounded w-75 bg-white shadow-sm p-3">
+                <div id="main-container" class="main-container rounded w-75 bg-white shadow-sm p-2">
 
                     <div id="content-area" class="p-3 " style="display: none;">
                     </div>
@@ -475,6 +476,7 @@
                             </div>
 
                             <button class="btn btn-success btn-lg mt-4">See The list</button>
+                            <br><br>
                         </div>
 
                     </div>
