--- a/public/index.html
+++ b/public/index.html
@@ -118,14 +118,14 @@
                     <ul class="nav justify-content-around w-100 text-center fw-semibold">
 
                         <li class="nav-item flex-fill">
-                            <a href="./index.html" class="nav-link active d-flex flex-column align-items-center py-2">
+                            <a href="./index.html" class="nav-link load-page active d-flex flex-column align-items-center py-2">
                                 <i class="bi bi-house-door-fill fs-5"></i>
                                 <small>Home</small>
                             </a>
                         </li>
 
                         <li class="nav-item flex-fill">
-                            <a href="../src/Books.html" class="nav-link d-flex flex-column align-items-center py-2">
+                            <a href="../src/Books.html" class="nav-link load-page d-flex flex-column align-items-center py-2">
                                 <i class="bi bi-book fs-5"></i>
                                 <small>Books</small>
                             </a>
@@ -133,21 +133,21 @@
 
                         <li class="nav-item flex-fill">
                             <a href="../src/Book_Details.html"
-                                class="nav-link d-flex flex-column align-items-center py-2">
+                                class="nav-link d-flex flex-column load-page align-items-center py-2">
                                 <i class="bi bi-journal-text fs-5"></i>
                                 <small>Details</small>
                             </a>
                         </li>
 
                         <li class="nav-item flex-fill">
-                            <a href="../src/Contact.html" class="nav-link d-flex flex-column align-items-center py-2">
+                            <a href="../src/Contact.html" class="nav-link load-page d-flex flex-column align-items-center py-2">
                                 <i class="bi bi-envelope fs-5"></i>
                                 <small>Contact</small>
                             </a>
                         </li>
 
                         <li class="nav-item flex-fill">
-                            <a href="#" class="nav-link d-flex flex-column align-items-center py-2">
+                            <a href="#" class="nav-link d-flex load-page flex-column align-items-center py-2">
                                 <i class="bi bi-gear fs-5"></i>
                                 <small>Settings</small>
                             </a>
