--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
                                 </div>
                             </div>
 
-                            <a href="#" class="nav-link text-dark d-flex align-items-center gap-2 px-2 py-1">
+                            <a href="./index.html" class="nav-link text-dark d-flex align-items-center gap-2 px-2 py-1">
                                 <i class="bi bi-gear"></i> Settings
                             </a>
                             <a href="#" class="nav-link text-danger d-flex align-items-center gap-2 px-2 py-1">
