--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../bootstrap-5.3.8-dist/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-    
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
@@ -118,14 +121,16 @@
                     <ul class="nav justify-content-around w-100 text-center fw-semibold">
 
                         <li class="nav-item flex-fill">
-                            <a href="./index.html" class="nav-link load-page active d-flex flex-column align-items-center py-2">
+                            <a href="./index.html"
+                                class="nav-link load-page active d-flex flex-column align-items-center py-2">
                                 <i class="bi bi-house-door-fill fs-5"></i>
                                 <small>Home</small>
                             </a>
                         </li>
 
                         <li class="nav-item flex-fill">
-                            <a href="../src/Books.html" class="nav-link load-page d-flex flex-column align-items-center py-2">
+                            <a href="../src/Books.html"
+                                class="nav-link load-page d-flex flex-column align-items-center py-2">
                                 <i class="bi bi-book fs-5"></i>
                                 <small>Books</small>
                             </a>
@@ -140,7 +145,8 @@
                         </li>
 
                         <li class="nav-item flex-fill">
-                            <a href="../src/Contact.html" class="nav-link load-page d-flex flex-column align-items-center py-2">
+                            <a href="../src/Contact.html"
+                                class="nav-link load-page d-flex flex-column align-items-center py-2">
                                 <i class="bi bi-envelope fs-5"></i>
                                 <small>Contact</small>
                             </a>
@@ -202,44 +208,20 @@
                                 </div>
                             </div>
                         </nav>
-
                         <div class="container rounded my-5 position-relative">
                             <h5 class="fw-bold text-dark mb-3">Books you read last</h5>
 
                             <div class="carousel-nav rounded">
-                                <div class="owl-carousel rounded-4 ">
-                                    <div class="book-card d-flex align-items-center p-3 rounded-4 text-white"
-                                        style="background: linear-gradient(90deg, #6a11cb 0%, #2575fc 100%);">
-                                        <img src="./Images/harry.jpg" class="book-img rounded-3 me-3">
-                                        <div>
-                                            <h6 class="fw-bold mb-1">Harry Potter And The Sorcerer’s Stone</h6>
-                                            <small>193 Page • Chapter 13 • Last Read</small>
-                                        </div>
-                                    </div>
-
-                                    <div class="book-card d-flex align-items-center p-3 rounded-4 text-white"
-                                        style="background: linear-gradient(90deg, #000428 0%, #004e92 100%);">
-                                        <img src="./Images/tani.webp" class="book-img rounded-3 me-3">
-                                        <div>
-                                            <h6 class="fw-bold mb-1">TA Nehisi Coates The Water Dancer</h6>
-                                            <small>New Purchase • Yet to Read</small>
-                                        </div>
-                                    </div>
-
-                                    <div class="book-card d-flex align-items-center p-3 rounded-4 text-white"
-                                        style="background: linear-gradient(90deg, #232526 0%, #414345 100%);">
-                                        <img src="./Images/rob.webp" class="book-img rounded-3 me-3">
-                                        <div>
-                                            <h6 class="fw-bold mb-1">Robert Dreyfus - The Life of Father and Son</h6>
-                                            <small>Recently Added</small>
-                                        </div>
-                                    </div>
-                                </div>
+                                <!-- 👇 Abhi empty h, JS se fill hoga -->
+                                <div class="owl-carousel rounded-4"></div>
 
                                 <button class="nav-btn prev"><i class="fa-solid fa-chevron-left"></i></button>
                                 <button class="nav-btn next"><i class="fa-solid fa-chevron-right"></i></button>
                             </div>
                         </div>
+
+
+
 
                         <div class="container my-5">
                             <div class="row">
@@ -492,53 +474,94 @@
 
 
     <script>
-
-
         $(document).ready(function () {
-            var owl = $(".owl-carousel");
-            owl.owlCarousel({
-                loop: true,
-                margin: 15,
-                nav: false,
-                dots: true,
-                responsive: {
-                    0: { items: 1.2 },
-                    576: { items: 2 },
-                    768: { items: 2.5 },
-                    992: { items: 3 }
+            $.ajax({
+                type: "GET",
+                url: "data.xml",
+                dataType: "xml",
+                success: function (xml) {
+                    $(xml).find("book").each(function () {
+                        const title = $(this).find("title").text();
+                        const details = $(this).find("details").text();
+                        const image = $(this).find("image").text();
+
+                        const card = `
+                  <div class="book-card d-flex align-items-center p-3 rounded-4 text-white"
+                       style="background: linear-gradient(90deg, #6a11cb 0%, #2575fc 100%);">
+                      <img src="${image}" class="book-img rounded-3 me-3"
+                           style="width:60px;height:80px;object-fit:cover;">
+                      <div>
+                          <h6 class="fw-bold mb-1">${title}</h6>
+                          <small>${details}</small>
+                      </div>
+                  </div>
+                `;
+
+                        $(".owl-carousel").append(card);
+                    });
+
+                    // ✅ Carousel init ab yaha hoga (data load hone ke baad)
+                    var owl = $(".owl-carousel");
+                    owl.owlCarousel({
+                        loop: true,
+                        margin: 15,
+                        nav: false,
+                        dots: true,
+                        responsive: {
+                            0: { items: 1.2 },
+                            576: { items: 2 },
+                            768: { items: 2.5 },
+                            992: { items: 3 }   // ✅ 3 items ek row me
+                        }
+                    });
+
+                    $(".next").click(function () {
+                        owl.trigger("next.owl.carousel");
+                    });
+                    $(".prev").click(function () {
+                        owl.trigger("prev.owl.carousel");
+                    });
+                },
+                error: function () {
+                    console.error("❌ Failed to load XML data.");
                 }
             });
-
-            $(".next").click(function () {
-                owl.trigger("next.owl.carousel");
-            });
-            $(".prev").click(function () {
-                owl.trigger("prev.owl.carousel");
-            });
-        });
-
-        var swiper = new Swiper(".mySwiper", {
-            effect: "coverflow",
-            grabCursor: true,
-            centeredSlides: true,
-            slidesPerView: "auto",
-            coverflowEffect: {
-                rotate: 20,
-                stretch: 0,
-                depth: 200,
-                modifier: 1,
-                slideShadows: false,
-            },
-            pagination: {
-                el: ".swiper-pagination",
-                clickable: true,
-            },
-            navigation: {
-                nextEl: ".swiper-button-next",
-                prevEl: ".swiper-button-prev",
-            },
         });
     </script>
+
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var swiper = new Swiper(".mySwiper", {
+                effect: "coverflow",
+                grabCursor: true,
+                centeredSlides: true,
+                slidesPerView: "auto",
+                coverflowEffect: {
+                    rotate: 30,
+                    stretch: 0,
+                    depth: 200,
+                    modifier: 1,
+                    slideShadows: false,
+                },
+                loop: true,
+                autoplay: {
+                    delay: 2500,
+                    disableOnInteraction: false,
+                },
+                pagination: {
+                    el: ".swiper-pagination",
+                    clickable: true,
+                },
+                navigation: {
+                    nextEl: ".swiper-button-next",
+                    prevEl: ".swiper-button-prev",
+                },
+            });
+        });
+    </script>
+
+
 
 
 
