--- a/public/index.html
+++ b/public/index.html
@@ -223,30 +223,36 @@
 
 
                         <div class="container my-5">
-                            <div class="row">
-                                <div class="col-lg-9">
-                                    <h5 class="fw-bold mb-3">New Release (Fiction)</h5>
+                            <div class="container my-5">
+                                <div class="row g-4">
+                                    <!-- New Release Section -->
+                                    <div class="col-lg-9 col-md-12">
+                                        <h5 class="fw-bold mb-3">New Release (Fiction)</h5>
 
-                                    <div class="swiper newReleaseSwiper">
-                                        <div class="swiper-wrapper" id="newReleaseWrapper">
-                                        </div>
+                                        <div class="swiper newReleaseSwiper">
+                                            <div class="swiper-wrapper" id="newReleaseWrapper">
+                                                <!-- Slides from XML will come here -->
+                                            </div>
 
-                                        <div class="swiper-pagination newRelease-pagination"></div>
-                                        <div class="swiper-button-prev newRelease-prev d-none"></div>
-                                        <div class="swiper-button-next newRelease-next d-none"></div>
-                                    </div>
-                                </div>
-
-                                <div id="autherBg" class="col-lg-3">
-                                    <h5 class="fw-bold mb-3">Famous Authors</h5>
-                                    <div class="swiper authorSwiper">
-                                        <div class="swiper-wrapper" id="authorWrapper">
+                                            <!-- Pagination & Nav -->
+                                            <div class="swiper-pagination newRelease-pagination"></div>
+                                            <div class="swiper-button-prev newRelease-prev d-none d-lg-block"></div>
+                                            <div class="swiper-button-next newRelease-next d-none d-lg-block"></div>
                                         </div>
                                     </div>
+
+                                    <!-- Authors Section -->
+                                    <div id="autherBg" class="col-lg-3 col-md-12">
+                                        <h5 class="fw-bold mb-3">Famous Authors</h5>
+                                        <div class="swiper authorSwiper">
+                                            <div class="swiper-wrapper" id="authorWrapper">
+                                                <!-- Author slides will come here -->
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-
-
                             </div>
+
                         </div>
 
 
@@ -346,7 +352,6 @@
                         $(".owl-carousel").append(card);
                     });
 
-                    // ✅ Carousel init ab yaha hoga (data load hone ke baad)
                     var owl = $(".owl-carousel");
                     owl.owlCarousel({
                         loop: true,
@@ -357,7 +362,7 @@
                             0: { items: 1.2 },
                             576: { items: 2 },
                             768: { items: 2.5 },
-                            992: { items: 3 }   // ✅ 3 items ek row me
+                            992: { items: 3 }   
                         }
                     });
 
@@ -391,7 +396,7 @@
 
                         let slide = `
                     <div class="swiper-slide">
-                        <img src="${image}" alt="${title}" />
+                        <img loading="lazy" src="${image}" alt="${title}" />
                         <div class="book-info">
                             <h5>${title}</h5>
                             <p>${author}</p>
@@ -440,7 +445,7 @@
         $(document).ready(function () {
             $.ajax({
                 type: "GET",
-                url: "data.xml",   // apka XML file
+                url: "data.xml",   
                 dataType: "xml",
                 success: function (xml) {
                     $(xml).find("book").each(function () {
@@ -449,11 +454,11 @@
                         var type = $(this).find("type").text();
                         var image = $(this).find("image").text();
 
-                        // ✅ Filter: only Fiction books
+                    
                         if (type.toLowerCase() === "fiction") {
                             var slide = `
                         <div class="swiper-slide text-center" style="min-width:150px;">
-                            <img src="${image}" class="rounded-3 shadow-sm"
+                            <img src="${image}" loading="lazy" class="rounded-3 shadow-sm"
                                  style="width:150px; height:220px; object-fit:cover;">
                             <h6 class="mt-2 fw-bold">${title}</h6>
                             <small class="text-muted">${author}</small>
@@ -464,7 +469,7 @@
                         }
                     });
 
-                    // ✅ Swiper initialize only after Fiction books are added
+      
                     var newReleaseSwiper = new Swiper(".newReleaseSwiper", {
                         slidesPerView: 3,
                         spaceBetween: 20,
@@ -497,7 +502,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             var newReleaseSwiper = new Swiper(".newReleaseSwiper", {
-                slidesPerView: 3,   // ek bar me 3 books
+                slidesPerView: 3,   
                 spaceBetween: 20,
                 loop: true,
                 autoplay: {
@@ -544,7 +549,7 @@
                         var slide = `
           <div class="swiper-slide">
             <div class="d-flex align-items-center gap-3 p-2 rounded shadow-sm bg-light">
-              <img src="${image}" class="rounded-circle border"
+              <img src="${image}" loading="lazy" class="rounded-circle border"
                    style="width:60px; height:60px; object-fit:cover;">
               <div>
                 <h6 class="mb-0 fw-bold">${name}</h6>
